@@ -29,6 +29,7 @@ import org.jboss.arquillian.container.test.api.RunAsClient;
 import org.jboss.arquillian.junit.Arquillian;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.jboss.wsf.test.JBossWSTestHelper;
 
 /**
  * [JBWS-1793] Provide a test case for the tools scripts that reside under JBOSS_HOME/bin
@@ -42,7 +43,7 @@ import org.junit.runner.RunWith;
  * @author Heiko.Braun@jboss.com
  */
 @RunWith(Arquillian.class)
-public class WSProvideScriptTestCase extends ScriptTestCase
+public class WSProvideScriptTestCase extends org.jboss.test.ws.jaxws.smoke.tools.ScriptTestCase
 {
    @Test
    @RunAsClient
@@ -50,8 +51,22 @@ public class WSProvideScriptTestCase extends ScriptTestCase
    {
       String absOutput = new File(TEST_DIR, "wsprovide" + FS + "java").getAbsolutePath();
       String command = JBOSS_HOME + FS + "bin" + FS + "wsprovide" + EXT + " -k -w -o " + absOutput + " --classpath " + CLASSES_DIR + " " + ENDPOINT_CLASS;
+
+      // wildfly9 security manager flag changed from -Djava.security.manager to -secmgr.
+      // Can't pass -secmgr arg through arquillian because it breaks arquillian's
+      // config of our tests.
+      // the -secmgr flag MUST be provided as an input arg to jboss-modules so it must
+      // come after the jboss-modules.jar ref.
+      String additionalJVMArgs = System.getProperty("additionalJvmArgs", "");
+      String securityManagerDesignator = additionalJVMArgs.replace("-Djava.security.manager", "-secmgr");
+
+      File policyFile = new File(JBossWSTestHelper.getTestResourcesDir()
+          + "/jaxws/smoke/tools/WSProvideScriptTestCase-security.policy");
+      String securityPolicyFile = " -Djava.security.policy=" + policyFile.getCanonicalPath();
+
       Map<String, String> env = new HashMap<>();
-      env.put("JAVA_OPTS", System.getProperty("additionalJvmArgs"));
+      env.put("JAVA_OPTS", securityManagerDesignator + securityPolicyFile);
+
       executeCommand(command, null, "wsprovide", env);
       File javaSource = new File(TEST_DIR, "wsprovide" + FS + "java" + FS + "org" + FS + "jboss" + FS + "test" + FS + "ws" + FS + "jaxws" + FS + "smoke" + FS + "tools" + FS + "jaxws" + FS + "AddResponse.java");
       assertTrue("Response wrapper not generated", javaSource.exists());
